# vocabula

./: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 645e4703c239_create_users_table.py
docker/: Dockerfile
migrations/: env.py  script.py.mako
migrations/versions/: 645e4703c239_create_users_table.py
nginx/: nginx.conf
scripts/: migrate.py
tests/: conftest.py
tests/test_api/: conftest.py
tests/test_api/test_root/: test_root.py
tests/test_api/test_users/: test_users.py
tests/test_migrations/: test_migrations.py
tests/test_users/: test_users.py
vocabula/: main.py
vocabula/api/: __init__.py  root.py  users.py
vocabula/core/: config.py
vocabula/db/: __init__.py  deps.py  session.py
vocabula/db/migrations/: env.py
vocabula/db/migrations/versions/: 645e4703c239_create_users_table.py
vocabula/db/postgres/: db.py
vocabula/models/: users.py
vocabula/schemas/: users.py
vocabula/services/: root.py  users.py
