[project]
name = "vocabula"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Repin",email = "vladimir.repin@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.production.dependencies]
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic-settings = "^2.10.1"


[tool.poetry.group.development.dependencies]
pytest = "^8.4.1"

