[project]
name = "vocabula"
version = "0.1.0"
package-mode = false
description = "The app, helping to learn the most commonly used English words."
authors = [
    {name = "Vladimir Repin",email = "vladimir.repin@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic (==1.16.5)",
    "annotated-types (==0.7.0)",
    "anyio (==4.10.0)",
    "asyncpg (==0.30.0)",
    "click (==8.2.1)",
    "dnspython (==2.8.0)",
    "email-validator (==2.3.0)",
    "fastapi (==0.116.2)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "pydantic (==2.11.9)",
    "pydantic-core (==2.33.2)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.43)",
    "starlette (==0.48.0)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.35.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.0"
mypy = "^1.18.2"
bandit = "^1.8.6"
pytest-asyncio = "^1.2.0"
testcontainers = {extras = ["postgresql"], version = "^4.13.2"}
httpx = "^0.28.1"

[tool.black]
skip-string-normalization = true
line-length = 89
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 89

[tool.mypy]
python_version = "3.13"
files = ["vocabula", "tests"]
exclude = "alembic.env"
ignore_missing_imports = true
strict = true
pretty = true

[tool.bandit]
recursive = true
quiet = true
exclude_dirs = ["tests"]
